Make swagger configuration recognize the new token from the config